# kenari

./: .dockerignore  .env  .env.edge.example  .env.example  .env.test.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  drizzle.config.ts  index.html  package.json  playwright.config.ts  svelte.config.js
.github/workflows/: ci.yml  release-cli.yml
cli/: .env.example  Cargo.toml
cli/.cargo/: config.toml
cli/src/: config.rs  init.rs  main.rs  metrics.rs  ui.rs
cli/src/commands/: agent.rs  doctor.rs  hids.rs  install.rs  mod.rs  onboard.rs  push.rs  register.rs  status.rs
cli/src/parsers/: nginx.rs
docs/: AGENT.md  ARCHITECTURE.md  BACKLOG.md  CLI_DESIGN.md  DEPENDENCIES.md  DEPLOYMENT.md  ETHICS.md  FORENSICS.md  GITHUB_OAUTH.md  IDS_SIEM_GUIDE.md  PORTING.md  ROADMAP.md  SECURITY.md  VISION.md
e2e/: README.md  api.test.ts  auth.test.ts  console.test.ts  dashboard.test.ts  helpers.ts  setup.test.ts
examples/: README.md
examples/nginx/: monitor.conf
examples/prometheus/: prometheus.yml
scripts/: db-migrate-prod.sh  deploy-all.sh  deploy.sh  install-cli.sh  logs.sh
src/: app.d.ts  app.html  hooks.server.ts
src/lib/: monitor.config.ts
src/lib/components/: AppShell.svelte  InstallPrompt.svelte
src/lib/server/: audit.ts  auth.ts  geo.ts  scheduler.ts  telegram.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
src/routes/admin/: +page.server.ts  +page.svelte
src/routes/agents/: +page.server.ts  +page.svelte
static/: manifest.json
(+28 files in other folders)
