[package]
name = "kenari-cli"
version = "0.1.0"
edition = "2021"
description = "Kenari agent — monitors your host and pushes metrics to your Kenari gateway"
license = "MIT"

[[bin]]
name = "kenari"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.32"
toml = "0.8"
dirs = "5"
anyhow = "1"
