[package]
name = "kenari-cli"
version = "0.2.0"
edition = "2021"
description = "Kenari agent — monitors your host and pushes metrics to your Kenari gateway"
license = "MIT"

[[bin]]
name = "kenari"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sysinfo = "0.32"
toml = "0.8"
dirs = "5"
anyhow = "1"
dotenvy = "0.15"
colored = "2"
notify = "6"
sha2 = "0.10"
walkdir = "2"
